adapt to jdk8